# TestEx

./: CMakeLists.txt  Test_exerceise.cpp
09-01-2024-KuzminKonstantin195-main/: README.md
